fix scrollbar

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -92,6 +92,7 @@ SCROLLBAR
 
 ::-webkit-scrollbar {
   width: 7px;
+  height: 7px;
   background-color: #f5f5f5;
 }
 
